# edge-ai-libraries-

microservices/model-download/: .dockerignore  logger.py  main.py  pyproject.toml
microservices/model-download/app/: main.py
microservices/model-download/chart/: Chart.yaml  values.yaml
microservices/model-download/chart/templates/: deployment.yaml  pvc.yaml  service.yaml
microservices/model-download/docker/: Dockerfile  compose.yaml
microservices/model-download/docs/api-docs/: openapi.yaml
microservices/model-download/tests/: conftest.py
microservices/model-download/tests/unit/: test_model_download.py
