[tool.poetry]
name = "model_download"
version = "0.1.0"
description = "A FastAPI application for downloading and converting Hugging Face models."
authors = ["Saranya, Anbuchezhiyan <saranya.a@intel.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.115.4"
uvicorn = "^0.23.2"
structlog = "25.1.0"
openvino-tokenizers = { version = "2025.0.*", extras = ["transformers"] }
openvino = "2025.0.*"
nncf = "2.14.0" 
sentence_transformers = "3.1.1"
openai = "1.59.4"
transformers = "<4.45"
huggingface-hub ="0.29.0"
optimum = {extras = ["openvino", "nncf"], version = "1.24.0"}

[build-system]
requires = ["poetry-core>=1.8.3"]
build-backend = "poetry.core.masonry.api"