[tool.poetry]
name = "model_download"
version = "0.1.0"
description = "A FastAPI application for downloading and converting Hugging Face models."
authors = []
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.115.4"
uvicorn = "^0.23.2"
structlog = "25.1.0"
pydantic = "^1.10.13"
openvino-tokenizers = { version = "2025.0.*", extras = ["transformers"] }
openvino = "2025.0.*"
nncf = "2.14.0" 
sentence_transformers = "3.1.1"
openai = "1.59.4"
transformers = "<4.45"
huggingface-hub = { version = "0.29.0", extras = ["hf-transfer"] }
optimum = {extras = ["openvino", "nncf"], version = "1.24.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
httpx = "^0.24.1"
pytest-mock = "^3.11.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=app --cov-report=term-missing"

[build-system]
requires = ["poetry-core>=1.8.3"]
build-backend = "poetry.core.masonry.api"